# kbest-assignment-enumeration-rust

./: Cargo.toml  README.md
.github/: ci.yml
.github/workflows/: ci.yml
src/: allenum.rs  kbest.rs  lapjv.rs  lib.rs  util.rs
tests/: tests.rs
