[package]
name = "kbest-lap"
version = "0.1.0"
authors = ["Jaeseung Han <thestudentofkyoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
# lapjv = "0.2.0"
num-traits = "0.2.14"
rand = "0.8.4"
log = "0.4.14"
ordered-float = "2.5.1"
itertools = "0.8.2"

[dev-dependencies]
ndarray-rand = "0.14.0"
float-cmp = "0.8.0"
